--- a/index.html
+++ b/index.html
@@ -66,41 +66,41 @@
 	</div>
 
 	<div class="   sezione-sfondo">
-	
 
- 			<div class="container-fluid d-flex  justify-content-center flex-column flex-md-row  p-0">
 
-				<div class="col-md-4 p-0">
-					<img class="img-fluid" src="images/home-page/sezione-vini.jpg" alt="Vini">
-				</div>
-				<div class="col-md-8 p-5">
-					<h2 class="text-uppercase p-3">LA SELEZIONE</h2>
-					<p class="p-3">Scopri la nostra esclusiva selezione di vini, accuratamente prodotti nelle
-						storiche colline di Collalbrigo. Ogni bot tiglia r iflette la p assione e l'esper ienza
-						della nostra cantina, unendo tradizione e innovazione. <br> <br>
-						Esplora le nostre etichette e trova il vino perfetto per ogni occasione</p>
+		<div class="container-fluid d-flex  justify-content-center flex-column flex-md-row  p-0 animation fadein_right">
 
-					<a href="vini.html" class="m-3 btn btn-outline-secondary p-2 btn-sm">SCOPRI DI PIÙ</a>
-				</div>
+			<div class="col-md-4 p-0">
+				<img class="img-fluid" src="images/home-page/sezione-vini.jpg" alt="Vini">
 			</div>
- 		
- 			<div class="container-fluid d-flex  justify-content-center flex-column flex-md-row  p-0">
+			<div class="col-md-8 p-5">
+				<h2 class="text-uppercase p-3">LA SELEZIONE</h2>
+				<p class="p-3">Scopri la nostra esclusiva selezione di vini, accuratamente prodotti nelle
+					storiche colline di Collalbrigo. Ogni bot tiglia r iflette la p assione e l'esper ienza
+					della nostra cantina, unendo tradizione e innovazione. <br> <br>
+					Esplora le nostre etichette e trova il vino perfetto per ogni occasione</p>
 
-				<div class="col-md-4 p-0 order-md-2">
-					<img class="img-fluid" src="images/home-page/sezione-territorio.jpg" alt="Collina del Prosecco">
-				</div>
-				<div class="col-md-8 p-5 order-md-1">
-					<h2 class="text-uppercase p-3">COLLINE DEL PROSECCO</h2>
-					<p class="p-3">
-						Immergiti nella bellezza delle colline del Prosecco, patrimonio dell'umanità UNESCO, dove nasce
-						la magia dei nostri vini. Scopri il terroir unico che dona ai nostri vini la loro inconfondibile
-						freschezza e vivacità. Attraverso immagini e storie, ti porteremo in un viaggio tra le nostre
-						vigne, facendoti vivere l'autenticità e la tradizione di questa terra incantata.</p>
-					<a href="territorio.html" class="m-3 p-2 btn btn-outline-secondary btn-sm">SCOPRI DI PIÙ</a>
-				</div>
+				<a href="vini.html" class="m-3 btn btn-outline-secondary p-2 btn-sm">SCOPRI DI PIÙ</a>
 			</div>
- 
- 		<div class="container-fluid d-flex  justify-content-center flex-column flex-md-row  p-0">
+		</div>
+
+		<div class="container-fluid d-flex  justify-content-center flex-column flex-md-row  p-0  animation fadein_left">
+
+			<div class="col-md-4 p-0 order-md-2">
+				<img class="img-fluid" src="images/home-page/sezione-territorio.jpg" alt="Collina del Prosecco">
+			</div>
+			<div class="col-md-8 p-5 order-md-1">
+				<h2 class="text-uppercase p-3">COLLINE DEL PROSECCO</h2>
+				<p class="p-3">
+					Immergiti nella bellezza delle colline del Prosecco, patrimonio dell'umanità UNESCO, dove nasce
+					la magia dei nostri vini. Scopri il terroir unico che dona ai nostri vini la loro inconfondibile
+					freschezza e vivacità. Attraverso immagini e storie, ti porteremo in un viaggio tra le nostre
+					vigne, facendoti vivere l'autenticità e la tradizione di questa terra incantata.</p>
+				<a href="territorio.html" class="m-3 p-2 btn btn-outline-secondary btn-sm">SCOPRI DI PIÙ</a>
+			</div>
+		</div>
+
+		<div class="container-fluid d-flex  justify-content-center flex-column flex-md-row  p-0 animation fadein_right">
 
 			<div class="col-md-4 p-0 ">
 				<img class="img-fluid" src="images/home-page/sezione-storia.png" alt="Giovane Tradizione">
@@ -114,7 +114,7 @@
 				<a href="storia.html" class="m-3  p-2 btn btn-outline-secondary btn-sm">SCOPRI DI PIÙ</a>
 			</div>
 		</div>
- 	</div>
+	</div>
 
 
 	<!-- Footer -->
