--- a/storia.html
+++ b/storia.html
@@ -221,27 +221,8 @@
 		</div>
 	</footer>
 
-	<script>
+	<script src="script_animation.js"></script>
 
-
-		jQuery(window).scroll(function () {
-
-			var scrollLenght = jQuery(window).scrollTop();
-			var winHeight = jQuery(window).height() / 1.2;
-
-			jQuery('.animation').each(function () {
-				var thisHeight = jQuery(this).offset().top;
-				if (scrollLenght >= thisHeight - winHeight)
-					jQuery(this).addClass('animate');
-				else {
-					jQuery(this).removeClass('animate');
-				}
-			});
-
-		});
-
-
-	</script>
 </body>
 
 </html>
