--- a/territorio.html
+++ b/territorio.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="it">
+
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -7,165 +8,167 @@
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 
 	<link rel="stylesheet" href="css_sito.css">
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
 
 	<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
 	<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 
 </head>
+
 <body>
 
 
-<!-- Navbar -->
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-	<a class="navbar-brand" href="index.html"><img src="images/logo.originale.png" alt="Logo"></a>
-	<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-		<span class="navbar-toggler-icon"></span>
-	</button>
-	<div class="collapse navbar-collapse" id="navbarNav">
-		<ul class="navbar-nav ml-auto  mr-5">
-			<li class="nav-item text-uppercase mr-4"><a class="nav-link" href="vini.html">Vini</a></li>
-			<li class="nav-item text-uppercase mr-4"><a class="nav-link" href="territorio.html">Territorio</a></li>
-			<li class="nav-item text-uppercase mr-4"><a class="nav-link" href="storia.html">Storia</a></li>
-		</ul>
-	</div>
-</nav>
+	<!-- Navbar -->
+	<nav class="navbar navbar-expand-lg navbar-light bg-light">
+		<a class="navbar-brand" href="index.html"><img src="images/logo.originale.png" alt="Logo"></a>
+		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+			aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+			<span class="navbar-toggler-icon"></span>
+		</button>
+		<div class="collapse navbar-collapse" id="navbarNav">
+			<ul class="navbar-nav ml-auto  mr-5">
+				<li class="nav-item text-uppercase mr-4"><a class="nav-link" href="vini.html">Vini</a></li>
+				<li class="nav-item text-uppercase mr-4"><a class="nav-link" href="territorio.html">Territorio</a></li>
+				<li class="nav-item text-uppercase mr-4"><a class="nav-link" href="storia.html">Storia</a></li>
+			</ul>
+		</div>
+	</nav>
 
 
-<!-- Carousel -->
-<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-	<!-- Indicators -->
-	<ol class="carousel-indicators">
-		<li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-		<li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-		<li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-	</ol>
+	<!-- Carousel -->
+	<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+		<!-- Indicators -->
+		<ol class="carousel-indicators">
+			<li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+			<li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+			<li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+		</ol>
 
-	<!-- Carousel items -->
-	<div class="carousel-inner">
-		<div class="carousel-item active">
-			<img class="d-block w-100" src="images/territorio/carousel-1.jpg" alt="First slide">
-			<div class="carousel-caption d-none d-md-block">
-				<p class="title">VINI CHE RISVEGLIANO I SENSI</p>
+		<!-- Carousel items -->
+		<div class="carousel-inner">
+			<div class="carousel-item active">
+				<img class="d-block w-100" src="images/territorio/carousel-1.jpg" alt="First slide">
+				<div class="carousel-caption d-none d-md-block">
+					<p class="title">VINI CHE RISVEGLIANO I SENSI</p>
+				</div>
+			</div>
+			<div class="carousel-item">
+				<img class="d-block w-100" src="images/territorio/carousel-2.jpg" alt="Second slide">
+				<div class="carousel-caption d-none d-md-block">
+					<p class="title">SCOPRI I NOSTRI VINI</p>
+
+				</div>
+			</div>
+			<div class="carousel-item">
+				<img class="d-block w-100" src="images/territorio/carousel-3.jpg" alt="Third slide">
+				<div class="carousel-caption d-none d-md-block">
+					<p class="title">UN VIAGGIO DI GUSTO</p>
+
+				</div>
 			</div>
 		</div>
-		<div class="carousel-item">
-			<img class="d-block w-100" src="images/territorio/carousel-2.jpg" alt="Second slide">
-			<div class="carousel-caption d-none d-md-block">
-				<p class="title">SCOPRI I NOSTRI VINI</p>
-				<a href="#" class="btn btn-lg">ESPLORA</a>
-			</div>
-		</div>
-		<div class="carousel-item">
-			<img class="d-block w-100" src="images/territorio/carousel-3.jpg" alt="Third slide">
-			<div class="carousel-caption d-none d-md-block">
-				<p class="title">UN VIAGGIO DI GUSTO</p>
-				<a href="#" class="btn btn-lg">CONTATTACI</a>
-			</div>
-		</div>
-	</div>
 
-	<!-- Controls -->
-	<a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-		<span class="carousel-control-prev-icon" aria-hidden="true"></span> <span class="sr-only">Previous</span> </a>
-	<a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-		<span class="carousel-control-next-icon" aria-hidden="true"></span> <span class="sr-only">Next</span> </a>
-</div>
-
-
-
-
-
-<!-- Content Section -->
-<section class="content-section m-0 p-0">
-	<div class="container-fluid ">
- 
-		<div class="row m-0 p-5 animation fadeIn">
-			<div class="container-fluid">
-			<h2 class="text-center section-title">COLLINE DEL PROSECCO</h2>
-			<p class="text-center section-subtitle">Nelle nostre vigne ogni grappolo è un dono della natura coltivato con passione</p>
-		</div>
+		<!-- Controls -->
+		<a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+			<span class="carousel-control-prev-icon" aria-hidden="true"></span> <span class="sr-only">Previous</span>
+		</a>
+		<a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+			<span class="carousel-control-next-icon" aria-hidden="true"></span> <span class="sr-only">Next</span> </a>
 	</div>
 
 
-		<div class="row mt-5  p-0 animation fadein_right">
-			<div class="col-md-4 p-0 m-0 ">
-				<img class="img-fluid mb-0" src="images/territorio/img-1.jpg" alt="Foto">
+
+
+
+	<!-- Content Section -->
+
+
+
+
+
+	<section class="content-section m-0 p-0">
+		<div class="container-fluid ">
+
+			<div class="row m-0 p-5 animation fadeIn">
+				<div class="container-fluid">
+					<h2 class="text-center section-title">COLLINE DEL PROSECCO</h2>
+					<p class="text-center section-subtitle">Nelle nostre vigne ogni grappolo è un dono della natura
+						coltivato con passione</p>
+				</div>
 			</div>
-			<div class="col-md-8 p-5  ">
-				<h2>I VIGNETI COSTAAMADI</h2>
-				<p>Situata sulla suggestiva collina di Collalbrigo, a Conegliano, la società agricola si estende su 20 ettari di vigne che incarnano l'essenza del nostro territorio. Dei 20 ettari, ben 16 si trovano nel prestigioso territorio UNESCO, un'area rinomata per la sua bellezza naturale e per la qualità eccezionale delle sue uve.</p>
-				<p>Ogni grappolo qui coltivato è il frutto di un'attenta cura e di una tradizione vinicola che si tramanda da generazioni, riflettendo la passione e la dedizione che mettiamo in ogni fase della produzione.</p>
-				<a href="https://www.google.com/maps" class="btn btn-outline-secondary btn-sm">VIENI A TROVARCI</a>
+
+
+			<div class="row mt-5  p-0 animation fadein_right">
+				<div class="col-md-4 p-0 m-0 ">
+					<img class="img-fluid mb-0" src="images/territorio/img-1.jpg" alt="Foto">
+				</div>
+				<div class="col-md-8 p-5  ">
+					<h2>I VIGNETI COSTAAMADI</h2>
+					<p>Situata sulla suggestiva collina di Collalbrigo, a Conegliano, la società agricola si estende su
+						20 ettari di vigne che incarnano l'essenza del nostro territorio. Dei 20 ettari, ben 16 si
+						trovano nel prestigioso territorio UNESCO, un'area rinomata per la sua bellezza naturale e per
+						la qualità eccezionale delle sue uve.</p>
+					<p>Ogni grappolo qui coltivato è il frutto di un'attenta cura e di una tradizione vinicola che si
+						tramanda da generazioni, riflettendo la passione e la dedizione che mettiamo in ogni fase della
+						produzione.</p>
+					<a href="https://www.google.com/maps" class="btn btn-outline-secondary btn-sm">VIENI A TROVARCI</a>
+				</div>
+			</div>
+
+			<div class="row mt-5 animation fadeIn">
+				<div class="col-md-12">
+					<img class="map" src="images/mappa.png" alt="Mappa">
+				</div>
+			</div>
+			<!--    -->
+			<div class="row mt-5 p-0 animation fadein_left  flex-column-reverse flex-md-row">
+				<div class="col-md-8 px-5  p-5 p-0 p-sm-3 text-right  ">
+					<h2>UN BRINDISI DI RAFFINATEZZA, IL NOSTRO PROSECCO DOCG</h2>
+					<p class="">Il Prosecco Conegliano Valdobbiadene DOCG è il gioiello della nostra produzione, un vino
+						che incarna la perfezione e l'eleganza delle colline del Prosecco UNESCO. Nato da uve
+						selezionate e coltivate con amore e dedizione, il nostro Prosecco si distingue per la sua
+						freschezza, le bollicine delicate e i sentori fruttati e floreali che evocano la bellezza del
+						nostro territorio.</p>
+					<p>Ogni sorso racconta la passione e la tradizione che animano Costaamadi, trasportando chi lo
+						assapora in un viaggio sensoriale unico.</p>
+				</div>
+				<div class="col-md-4 p-0 m-0 ">
+					<img class="img-fluid " src="images/territorio/img-1.jpg" alt="Foto">
+				</div>
 			</div>
 		</div>
+	</section>
 
-		<div class="row mt-5 animation fadeIn">
-			<div class="col-md-12">
-				<img class="map" src="images/mappa.png" alt="Mappa">
+
+	<!-- Footer -->
+	<footer class="footer py-5 pb-3">
+		<div class="container-fluid ">
+			<div class="row align-items-center">
+				<div class="col-md-4 pb-5 col-sm-12 text-center">
+					<a class="logo" href="#"><img src="images/logo.bianco.png" alt="Logo"></a>
+				</div>
+
+				<div class="col-md-4 col-sm-6 ">
+					<h5 class="mb-0 pb-0 titoletto">SOCIETÀ AGRICOLA COSTABELLA</h5>
+					<p class="my-1 py-0">di Amadio Adriano e Amadio Paolo s.s.</p>
+					<div class="underline"></div>
+					<p>Via Michele Giunti 27, <br> 31015 Conegliano TV </p>
+					<p>P.IVA 04357000266</p>
+				</div>
+				<div class="col-md-4 col-sm-6  ">
+					<h5 class="titoletto my-1 py-0">CONTATTI</h5>
+					<div class="underline"></div>
+					<p>Tel: +39 0438 62405 <br> Email:
+						<a href="mailto:soc.agr.costabella@gmail.com">soc.agr.costabella@gmail.com</a>
+					</p>
+				</div>
 			</div>
 		</div>
-<!--    -->
-		<div class="row mt-5 p-0 animation fadein_left  flex-column-reverse flex-md-row">
-			<div class="col-md-8 px-5  p-0 p-sm-3 text-right  ">
-				<h2>UN BRINDISI DI RAFFINATEZZA, IL NOSTRO PROSECCO DOCG</h2>
-				<p class="">Il Prosecco Conegliano Valdobbiadene DOCG è il gioiello della nostra produzione, un vino che incarna la perfezione e l'eleganza delle colline del Prosecco UNESCO. Nato da uve selezionate e coltivate con amore e dedizione, il nostro Prosecco si distingue per la sua freschezza, le bollicine delicate e i sentori fruttati e floreali che evocano la bellezza del nostro territorio.</p>
-				<p>Ogni sorso racconta la passione e la tradizione che animano Costaamadi, trasportando chi lo assapora in un viaggio sensoriale unico.</p>
-			</div>
-			<div class="col-md-4 p-0 m-0 ">
-				<img class="img-fluid " src="images/territorio/img-1.jpg" alt="Foto">
-			</div>
-		</div>
-	</div>
-</section>
+	</footer>
 
+	<script src="script_animation.js"></script>
 
-<!-- Footer -->
-<footer class="footer py-5 pb-3">
-	<div class="container-fluid ">
-		<div class="row align-items-center">
-			<div class="col-md-4 pb-5 col-sm-12 text-center">
-				<a class="logo" href="#"><img src="images/logo.bianco.png" alt="Logo"></a>
-			</div>
-
-			<div class="col-md-4 col-sm-6 ">
-				<h5 class="mb-0 pb-0 titoletto">SOCIETÀ AGRICOLA COSTABELLA</h5>
-				<p class="my-1 py-0">di Amadio Adriano e Amadio Paolo s.s.</p>
-				<div class="underline"></div>
-				<p>Via Michele Giunti 27, <br> 31015 Conegliano TV </p>
-				<p>P.IVA 04357000266</p>
-			</div>
-			<div class="col-md-4 col-sm-6  ">
-				<h5 class="titoletto my-1 py-0">CONTATTI</h5>
-				<div class="underline"></div>
-				<p>Tel: +39 0438 62405 <br> Email:
-					<a href="mailto:soc.agr.costabella@gmail.com">soc.agr.costabella@gmail.com</a></p>
-			</div>
-		</div>
-	</div>
-</footer>
-
-<script>
-
-
-	jQuery(window).scroll(function () {
-
-		var scrollLenght = jQuery(window).scrollTop();
-		var winHeight = jQuery(window).height() / 1.2;
-
-		jQuery('.animation').each(function () {
-			var thisHeight = jQuery(this).offset().top;
-			if (scrollLenght >= thisHeight - winHeight)
-				jQuery(this).addClass('animate');
-			else {
-				jQuery(this).removeClass('animate');
-			}
-		});
-
-	});
-
-
-</script>
 </body>
+
 </html>
