--- a/vini.html
+++ b/vini.html
@@ -159,26 +159,6 @@
 	</div>
 </footer>
 
-<script>
-
-
-	jQuery(window).scroll(function () {
-
-		var scrollLenght = jQuery(window).scrollTop();
-		var winHeight = jQuery(window).height() / 1.2;
-
-		jQuery('.animation').each(function () {
-			var thisHeight = jQuery(this).offset().top;
-			if (scrollLenght >= thisHeight - winHeight)
-				jQuery(this).addClass('animate');
-			else {
-				jQuery(this).removeClass('animate');
-			}
-		});
-
-	});
-
-
-</script>
+<script src="script_animation.js"></script>
 </body>
 </html>
