--- a/storia.html
+++ b/storia.html
@@ -149,7 +149,7 @@
 			</div>
 			<div class="row  my-4   justify-content-center flex-column-reverse flex-md-row">
 				<div
-					class="descrizione my-5 my-md-0 col-md-6 m-md-auto col-md-6  m-md-auto pr-md-5  animation fadein_left text-right">
+					class="descrizione my-5 my-md-0 col-md-6 m-md-auto col-md-6 px-5 text-right animation fadein_left animate">
 					<p class="mx-auto">La famiglia Amadio è consapevole del paesaggio culturale unico in cui coltiva i
 						propri vigneti e si impegna a trasmettere i profumi e i sapori naturali e sinceri delle colline
 						del Prosecco.</p>
