fix img + margini

--- a/index.html
+++ b/index.html
@@ -47,10 +47,10 @@
 				<div class="col-md-4 py-5  d-flex flex-column  ">
 					<h1 class="px-3">DOVE LA PASSIONE PER IL VINO SI INTRECCIA CON LA MAGIA DELLE COLLINE DEL PROSECCO
 					</h1>
-					<a href="#" class="btn btn-md m-5 mt-4">SCOPRI DI PIÙ</a>
+					<a href="territorio.html" class="btn btn-md m-5 mt-4">SCOPRI DI PIÙ</a>
 				</div>
 				<div class="col-md-8 p-0  m-0 ">
-					<img class=" " src="images/home-page/immagine-home.jpg" alt="Collina">
+					<img class=" " src="images/home-page/home.page.casa.jpg" alt="Collina">
 				</div>
 			</div>
 		</div>
@@ -72,14 +72,12 @@
 			class="container-fluid d-flex  justify-content-center flex-column flex-md-row  p-0 animation fadein_right bg-white ">
 
 			<div class="col-md-4 p-0 ">
-				<img class="img-fluid" src="images/home-page/sezione-vini.jpg" alt="Vini">
+				<img class="img-fluid" src="images/home-page/home.page.bottiglie.jpg" alt="Vini">
 			</div>
 			<div class="col-md-8 p-5">
 				<h2 class="text-uppercase p-3">LA SELEZIONE</h2>
-				<p class="p-3">Scopri la nostra esclusiva selezione di vini, accuratamente prodotti nelle
-					storiche colline di Collalbrigo. Ogni bot tiglia r iflette la p assione e l'esper ienza
-					della nostra cantina, unendo tradizione e innovazione. <br> <br>
-					Esplora le nostre etichette e trova il vino perfetto per ogni occasione</p>
+				<p class="p-3">Scopri la nostra esclusiva selezione di vini, prodotti con cura nelle storiche colline di Collalbrigo. <br><br>
+					Ogni bottiglia riflette la passione e l'esperienza della nostra cantina, unendo tradizione e innovazione</p>
 
 				<a href="vini.html" class="m-3 btn btn-outline-secondary p-2 btn-sm">SCOPRI DI PIÙ</a>
 			</div>
@@ -91,7 +89,7 @@
 			class="container-fluid d-flex  justify-content-center flex-column flex-md-row  p-0  animation fadein_left bg-white">
 
 			<div class="col-md-4 p-0 order-md-2">
-				<img class="img-fluid" src="images/home-page/sezione-territorio.jpg" alt="Collina del Prosecco">
+				<img class="img-fluid" src="images/home-page/home.page.uva.jpg" alt="Collina del Prosecco">
 			</div>
 			<div class="col-md-8 p-5 order-md-1">
 				<h2 class="text-uppercase p-3">COLLINE DEL PROSECCO</h2>
@@ -109,7 +107,7 @@
 			class="container-fluid d-flex  justify-content-center flex-column flex-md-row  p-0 animation fadein_right bg-white">
 
 			<div class="col-md-4 p-0 ">
-				<img class="img-fluid" src="images/home-page/sezione-storia.png" alt="Giovane Tradizione">
+				<img class="img-fluid" src="images/home-page/home.page.carretto.jpg" alt="Giovane Tradizione">
 			</div>
 			<div class="col-md-8 p-5">
 				<h2 class="text-uppercase p-3">GIOVANE TRADIZIONE</h2>
