--- a/storia.html
+++ b/storia.html
@@ -88,7 +88,7 @@
 			</div>
 			<div class="row mx-auto col-8 col-md-5">
 
-				<div class="year m-5 text-center m-5  "><img class="d-block " src="images/1987.png" alt="1987"></div>
+				<div class="year text-center my-5"><img class="d-block " src="images/1987.png" alt="1987"></div>
 			</div>
 		</div>
 	</div>
@@ -101,7 +101,7 @@
 
 			<div class="row my-4">
 				<div class="col-md-6  m-3 animation fadein_left mx-auto pl-md-0 pr-md-5">
-					<img class="img-fluid  " src="https://dummyimage.com/1024x600/000/fff&text=Foto" alt="Foto">
+					<img class="img-fluid  " src="images/storia/storia.azienda.bn.jpg" alt="Foto">
 				</div>
 
 				<div class="descrizione my-5 my-md-0 col-md-6 m-md-auto px-5 animation fadein_right text-left animate ">
@@ -126,11 +126,11 @@
 				<div class="col-md-6 p-4 pl-md-0 pr-md-5  animation fadein_right  ">
 					<div class="row align-items-center ">
 						<div class="col-md-5  col-6">
-							<img class="img-fluid mb-4 mr-5" src="https://dummyimage.com/300x400/000/fff&text=Foto"
+							<img class="img-fluid mb-4 mr-5" src="images/storia/storia.adriano.jpg"
 								alt="Foto">
 						</div>
 						<div class="col-6 col-md-7 pr-md-0 mr-md-0">
-							<img class="img-fluid  " src="https://dummyimage.com/500x400/000/fff&text=Foto" alt="Foto">
+							<img class="img-fluid  " src="images/storia/storia.bambino.jpg" alt="Foto">
 
 						</div>
 					</div>
@@ -138,7 +138,7 @@
 			</div>
 			<div class="row my-4">
 				<div class="col-md-6 pl-md-0 pr-md-5 animation fadein_left  ">
-					<img class="img-fluid  " src="https://dummyimage.com/1024x600/000/fff&text=Foto" alt="Foto">
+					<img class="img-fluid  " src="images/storia/storia.azienda.colori.jpg" alt="Foto">
 				</div>
 				<div
 					class="descrizione my-5 my-md-0 col-md-6 m-md-auto col-md-6 m-4 m-md-auto text-left animation fadein_right animate">
@@ -157,11 +157,11 @@
 				<div class="col-md-6 p-4 pl-md-0 pr-md-5 animation fadein_right">
 					<div class="row align-items-center">
 						<div class="col-6 col-md-5  ">
-							<img class="img-fluid  mr-md-5" src="https://dummyimage.com/300x400/000/fff&text=Foto"
+							<img class="img-fluid  mr-md-5" src="images/storia/storia.adriano.bn.jpg"
 								alt="Foto">
 						</div>
 						<div class=" col-6 col-md-7 pr-md-0 mr-md-0">
-							<img class="img-fluid  " src="https://dummyimage.com/500x400/000/fff&text=Foto" alt="Foto">
+							<img class="img-fluid  " src="images/storia/storia.azienda.ora.jpg" alt="Foto">
 
 						</div>
 					</div>
