--- a/territorio.html
+++ b/territorio.html
@@ -97,18 +97,18 @@
 
 			<div class="row mt-5 bg-white p-0 animation fadein_right">
 				<div class="col-md-4 p-0 m-0 ">
-					<img class="img-fluid mb-0" src="images/territorio/img-1.jpg" alt="Foto">
+					<img class="img-fluid mb-0" src="images/territorio/territorio.vigneto.jpg" alt="Foto">
 				</div>
 				<div class="col-md-8 p-5  ">
 					<h2>I VIGNETI COSTAAMADI</h2>
-					<p>Situata sulla suggestiva collina di Collalbrigo, a Conegliano, la società agricola si estende su
+					<p class="py-3" >Situata sulla suggestiva collina di Collalbrigo, a Conegliano, la società agricola si estende su
 						20 ettari di vigne che incarnano l'essenza del nostro territorio. Dei 20 ettari, ben 16 si
 						trovano nel prestigioso territorio UNESCO, un'area rinomata per la sua bellezza naturale e per
 						la qualità eccezionale delle sue uve.</p>
 					<p>Ogni grappolo qui coltivato è il frutto di un'attenta cura e di una tradizione vinicola che si
 						tramanda da generazioni, riflettendo la passione e la dedizione che mettiamo in ogni fase della
 						produzione.</p>
-					<a href="https://www.google.com/maps" class="btn btn-outline-secondary btn-sm">VIENI A TROVARCI</a>
+					<a target="_blank" href="https://maps.app.goo.gl/trznsQTLfNB7TKUL6" class="btn btn-outline-secondary btn-sm">VIENI A TROVARCI</a>
 				</div>
 			</div>
 
@@ -121,7 +121,7 @@
 			<div class="row mt-5 p-0 animation fadein_left  flex-column-reverse flex-md-row">
 				<div class="col-md-8 px-5  p-5 p-0 p-sm-3 text-right  ">
 					<h2>UN BRINDISI DI RAFFINATEZZA, IL NOSTRO PROSECCO DOCG</h2>
-					<p class="">Il Prosecco Conegliano Valdobbiadene DOCG è il gioiello della nostra produzione, un vino
+					<p class="py-3">Il Prosecco Conegliano Valdobbiadene DOCG è il gioiello della nostra produzione, un vino
 						che incarna la perfezione e l'eleganza delle colline del Prosecco UNESCO. Nato da uve
 						selezionate e coltivate con amore e dedizione, il nostro Prosecco si distingue per la sua
 						freschezza, le bollicine delicate e i sentori fruttati e floreali che evocano la bellezza del
@@ -130,7 +130,7 @@
 						assapora in un viaggio sensoriale unico.</p>
 				</div>
 				<div class="col-md-4 p-0 m-0 ">
-					<img class="img-fluid " src="images/territorio/img-1.jpg" alt="Foto">
+					<img class="img-fluid " src="images/territorio/territorio.vite.jpg" alt="Foto">
 				</div>
 			</div>
 		</div>
