--- a/vini.html
+++ b/vini.html
@@ -89,43 +89,43 @@
 		</div>
 		<div class="row">
 			<div class="col-md-3 col-sm-6 text-center animation fadeIn">
-				<img class="img-fluid" src="images/vini/conegliano-valdobbiadene.jpg"
+				<img class="img-fluid" src="images/vini/EXTRA DRY.jpg"
 					alt="Prosecco Superiore EXTRA DRY">
 				<h5 class="product-title px-4">CONEGLIANO VALDOBBIADENE</h5>
 				<p class="product-subtitle"><span class="font-italic"> Superiore</span> <br> EXTRA DRY</p>
 			</div>
 			<div class="col-md-3 col-sm-6 text-center animation fadeIn">
-				<img class="img-fluid" src="images/vini/conegliano-valdobbiadene_1.jpg" alt="Prosecco Sur Lie">
+				<img class="img-fluid" src="images/vini/SUR LIE.jpg" alt="Prosecco Sur Lie">
 				<h5 class="product-title px-4">CONEGLIANO VALDOBBIADENE</h5>
 				<p class="product-subtitle"><span class="font-italic">Prosecco Sur Lie </span> <br> DOCG</p>
 			</div>
 			<div class="col-md-3 col-sm-6 text-center animation fadeIn">
-				<img class="img-fluid" src="images/vini/conegliano-valdobbiadene_2.jpg" alt="Prosecco Superiore BRUT">
+				<img class="img-fluid" src="images/vini/BRUT.jpg" alt="Prosecco Superiore BRUT">
 				<h5 class="product-title px-4">CONEGLIANO VALDOBBIADENE</h5>
 				<p class="product-subtitle"><span class="font-italic">Prosecco Superiore </span><br> DOCG - BRUT</p>
 			</div>
 			<div class="col-md-3 col-sm-6 text-center animation fadeIn">
-				<img class="img-fluid" src="images/vini/verdisio.jpg" alt="Verdìso">
+				<img class="img-fluid" src="images/vini/VERDISO.jpg" alt="Verdìso">
 				<h5 class="product-title px-4">VERDISO</h5>
 				<p class="product-subtitle"><span class="font-italic">Colli Trevigiani </span> <br> IGT</p>
 			</div>
 			<div class="col-md-3 col-sm-6 text-center animation fadeIn">
-				<img class="img-fluid" src="images/vini/merlot.jpg" alt="Merlot">
+				<img class="img-fluid" src="images/vini/MERLOT.jpg" alt="Merlot">
 				<h5 class="product-title px-4">MERLOT</h5>
 				<p class="product-subtitle"><span class="font-italic">Colli Trevigiani</span><br> IGT</p>
 			</div>
 			<div class="col-md-3 col-sm-6 text-center animation fadeIn">
-				<img class="img-fluid" src="images/vini/incrocio-manzoni.jpg" alt="Incrocio Manzoni">
+				<img class="img-fluid" src="images/vini/MANZONI.jpg" alt="Incrocio Manzoni">
 				<h5 class="product-title px-4">INCROCIO MANZONI 6.0.13</h5>
 				<p class="product-subtitle"><span class="font-italic">Bianco</span></p>
 			</div>
 			<div class="col-md-3 col-sm-6 text-center animation fadeIn">
-				<img class="img-fluid" src="images/vini/spumante.jpg" alt="Spumante di Qualità">
+				<img class="img-fluid" src="images/vini/SPUMANTE.jpg" alt="Spumante di Qualità">
 				<h5 class="product-title px-4">SPUMANTE DI QUALITÀ</h5>
 				<p class="product-subtitle"><span class="font-italic">Vino bianco</span></p>
 			</div>
 			<div class="col-md-3 col-sm-6 text-center animation fadeIn">
-				<img class="img-fluid" src="images/vini/rosato.jpg" alt="Rosato">
+				<img class="img-fluid" src="images/vini/ROSATO.jpg" alt="Rosato">
 				<h5 class="product-title px-4">ROSATO</h5>
 				<p class="product-subtitle"><span class="font-italic">Vino Spumante</span></p>
 			</div>
