--- a/territorio.html
+++ b/territorio.html
@@ -100,7 +100,7 @@
 					<img class="img-fluid mb-0" src="images/territorio/territorio.vigneto.jpg" alt="Foto">
 				</div>
 				<div class="col-md-8 p-5  ">
-					<h2>I VIGNETI COSTAAMADI</h2>
+					<h2 class="py-3">I VIGNETI COSTAAMADI</h2>
 					<p class="py-3" >Situata sulla suggestiva collina di Collalbrigo, a Conegliano, la società agricola si estende su
 						20 ettari di vigne che incarnano l'essenza del nostro territorio. Dei 20 ettari, ben 16 si
 						trovano nel prestigioso territorio UNESCO, un'area rinomata per la sua bellezza naturale e per
@@ -120,7 +120,7 @@
 			<!--    -->
 			<div class="row mt-5 p-0 animation fadein_left  flex-column-reverse flex-md-row">
 				<div class="col-md-8 px-5  p-5 p-0 p-sm-3 text-right  ">
-					<h2>UN BRINDISI DI RAFFINATEZZA, IL NOSTRO PROSECCO DOCG</h2>
+					<h2 class="py-3">UN BRINDISI DI RAFFINATEZZA, IL NOSTRO PROSECCO DOCG</h2>
 					<p class="py-3">Il Prosecco Conegliano Valdobbiadene DOCG è il gioiello della nostra produzione, un vino
 						che incarna la perfezione e l'eleganza delle colline del Prosecco UNESCO. Nato da uve
 						selezionate e coltivate con amore e dedizione, il nostro Prosecco si distingue per la sua
