--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 	<div class="info-section ">
 		<div class="container">
 			<img class="animation fadeIn" src="images/simboli.png" alt="Icons">
-			<p class="animation fadeIn titolo" style="transition-delay: 0.1s;">Dal cuore della tradizione, un brindisi
+			<p class="py-3" style="transition-delay: 0.1s;">Dal cuore della tradizione, un brindisi
 				alla vita e alla bellezza della natura</p>
 		</div>
 	</div>
@@ -126,7 +126,7 @@
 		<div class="container-fluid ">
 			<div class="row align-items-center">
 				<div class="col-md-4 pb-5 col-sm-12 text-center">
-					<a class="logo" href="#"><img src="images/logo.bianco.png" alt="Logo"></a>
+					<a class="logo" href="index.html"><img src="images/logo.bianco.png" alt="Logo"></a>
 				</div>
 
 				<div class="col-md-4 col-sm-6 ">
