--- a/storia.html
+++ b/storia.html
@@ -201,8 +201,8 @@
 		<div class="container-fluid ">
 			<div class="row align-items-center">
 				<div class="col-md-4 pb-5 col-sm-12 text-center">
-					<a class="logo" href="#"><img src="images/logo.bianco.png" alt="Logo"></a>
-				</div>
+					<a class="logo" href="index.html"><img src="images/logo.bianco.png" alt="Logo"></a>
+			</div>
 
 				<div class="col-md-4 col-sm-6 ">
 					<h5 class="mb-0 pb-0 titoletto">SOCIETÀ AGRICOLA COSTABELLA</h5>
