--- a/vini.html
+++ b/vini.html
@@ -145,7 +145,7 @@
 		<div class="container-fluid ">
 			<div class="row align-items-center">
 				<div class="col-md-4 pb-5 col-sm-12 text-center">
-					<a class="logo" href="#"><img src="images/logo.bianco.png" alt="Logo"></a>
+					<a class="logo" href="index.html"><img src="images/logo.bianco.png" alt="Logo"></a>
 				</div>
 
 				<div class="col-md-4 col-sm-6 ">
