--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 	<div class="info-section ">
 		<div class="container">
 			<img class="animation fadeIn" src="images/simboli.png" alt="Icons">
-			<p class="py-3" style="transition-delay: 0.1s;">Dal cuore della tradizione, un brindisi
+			<p class="py-3 pb-4" style="transition-delay: 0.1s;">Dal cuore della tradizione, un brindisi
 				alla vita e alla bellezza della natura</p>
 		</div>
 	</div>
