--- a/territorio.html
+++ b/territorio.html
@@ -49,7 +49,7 @@
 		<!-- Carousel items -->
 		<div class="carousel-inner">
 			<div class="carousel-item active">
-				<img class="d-block w-100" src="images/territorio/carousel-1.jpg" alt="First slide">
+				<img class="d-block w-100" src="images/territorio/territorio.vigneto.jpg" alt="First slide">
 				<div class="carousel-caption d-none d-md-block  w-100">
 					<p class="title">VINI CHE RISVEGLIANO I SENSI</p>
 				</div>
@@ -97,7 +97,7 @@
 
 			<div class="row mt-5 bg-white p-0 animation fadein_right">
 				<div class="col-md-4 p-0 m-0 ">
-					<img class="img-fluid mb-0" src="images/territorio/territorio.vigneto.jpg" alt="Foto">
+					<img class="img-fluid mb-0" src="https://dummyimage.com/1000x1000/568/fff" alt="Foto">
 				</div>
 				<div class="col-md-8 p-5  ">
 					<h2 class="py-3">I VIGNETI COSTAAMADI</h2>
