--- a/storia.html
+++ b/storia.html
@@ -52,19 +52,19 @@
 			<div class="carousel-item active">
 				<img class="d-block w-100" src="images/storia/carousel-1.jpg" alt="First slide">
 				<div class="carousel-caption d-none d-md-block  w-100">
-					<p class="title">VINI CHE RISVEGLIANO I SENSI</p>
+					<p class="title">UNA STORIA DI FAMIGLIA E PASSIONE</p>
 				</div>
 			</div>
 			<div class="carousel-item">
 				<img class="d-block w-100" src="images/storia/carousel-2.jpg" alt="Second slide">
 				<div class="carousel-caption d-none d-md-block  w-100">
-					<p class="title">SCOPRI I NOSTRI VINI</p>
+					<p class="title">UNA STORIA DI FAMIGLIA E PASSIONE</p>
 				</div>
 			</div>
 			<div class="carousel-item">
 				<img class="d-block w-100" src="images/storia/carousel-3.jpg" alt="Third slide">
 				<div class="carousel-caption d-none d-md-block  w-100">
-					<p class="title">UN VIAGGIO DI GUSTO</p>
+					<p class="title">UNA STORIA DI FAMIGLIA E PASSIONE</p>
 				</div>
 			</div>
 		</div>
