--- a/vini.html
+++ b/vini.html
@@ -56,14 +56,14 @@
 			<div class="carousel-item">
 				<img class="d-block w-100" src="images/vini/carousel-1.jpg" alt="Second slide">
 				<div class="carousel-caption d-none d-md-block  w-100">
-					<p class="title">SCOPRI I NOSTRI VINI</p>
+					<p class="title">VINI CHE RISVEGLIANO I SENSI</p>
 
 				</div>
 			</div>
 			<div class="carousel-item">
 				<img class="d-block w-100" src="images/vini/carousel-2.jpg" alt="Third slide">
 				<div class="carousel-caption d-none d-md-block  w-100">
-					<p class="title">UN VIAGGIO DI GUSTO</p>
+					<p class="title">VINI CHE RISVEGLIANO I SENSI</p>
 
 				</div>
 			</div>
