--- a/vini.html
+++ b/vini.html
@@ -13,7 +13,7 @@
 	<meta property="og:title" content="Costaamadi" />
 	<meta property="og:image" content="images/preview.png" />
 	<title>Costamadi</title>
-	
+
 	<link rel="apple-touch-icon" sizes="180x180" href="icon/apple-touch-icon.png">
 	<link rel="icon" type="image/png" sizes="32x32" href="icon/favicon-32x32.png">
 	<link rel="icon" type="image/png" sizes="16x16" href="icon/favicon-16x16.png">
@@ -140,7 +140,7 @@
 	<div class="row p-4" id="download-pdf">
 		<div class="container text-center">
 			<a href="pdf/vini.costaamadi.pdf" target="_blank"
-				class="animation fadeIn btn py-2 px-4 btn-outline-primary m-4 btn-lg animate">GUIDA AI NOSTRI VINI</a>
+				class="animation fadeIn btn py-1 px-2 btn-outline-primary m-4 btn-md animate">GUIDA AI NOSTRI VINI</a>
 		</div>
 	</div>
 
